# openapi.yaml
@@ -2907,7 +2907,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/SharedInformationModel"
+                  "$ref": "#/components/schemas/ExternalUserInformationModel"
                 }
               }
             }
@@ -2917,7 +2917,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/SharedInformationModel"
+                  "$ref": "#/components/schemas/ExternalUserInformationModel"
                 }
               }
             }
@@ -2927,7 +2927,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/SharedInformationModel"
+                  "$ref": "#/components/schemas/ExternalUserInformationModel"
                 }
               }
             }
