# src/main/java/org/openlogisticsfoundation/ecmr/domain/models/ExternalUserInformationModel.java
@@ -13,9 +13,10 @@ import lombok.Getter;
 
 @AllArgsConstructor
 @Getter
-public class SharedInformationModel {
+public class ExternalUserInformationModel {
     private String companyName;
     private String driverName;
+    private String driverPhone;
 }
 
 
